adding new gitignore and files

--- a/general_exploration.ipynb
+++ b/general_exploration.ipynb
@@ -80962,6 +80962,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Number of unique lifespan 1482, type of unique [nan '30-may-2039' '11-aug-2031' ... '06-apr-2036' '16-mar-2037'\n",
+      " '23-dec-2040']\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_name = \"lifespan\"\n",
+    "print(f\" Number of unique {feature_name} {train_df[feature_name].nunique()}, type of unique {train_df[feature_name].unique()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
@@ -81215,6 +81234,37 @@
     "\n",
     "# Show the plot\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        132031.0\n",
+       "1         43950.0\n",
+       "2         30794.0\n",
+       "3         16084.0\n",
+       "4         55456.0\n",
+       "           ...   \n",
+       "34995     19388.0\n",
+       "34996     39722.0\n",
+       "34997     42233.0\n",
+       "34998     14799.0\n",
+       "34999     21692.0\n",
+       "Name: arf, Length: 35000, dtype: float64"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(all_data.arf)"
    ]
   },
   {
