--- a/EDA_2.ipynb
+++ b/EDA_2.ipynb
@@ -13143,7 +13143,9 @@
   {
    "cell_type": "markdown",
    "id": "dc8e7e96-4a19-4d2a-8806-3069f6e1e465",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Parse category"
    ]
@@ -13868,7 +13870,9 @@
   {
    "cell_type": "markdown",
    "id": "0a0e6b57-5f99-4575-89f7-0fe00d3523e2",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Eco category"
    ]
