update preprocessing and modelling (XGB, SVR)

--- a/EDA_2.ipynb
+++ b/EDA_2.ipynb
@@ -10095,9 +10095,7 @@
   {
    "cell_type": "markdown",
    "id": "0a0e6b57-5f99-4575-89f7-0fe00d3523e2",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Eco category"
    ]
@@ -11130,9 +11128,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb2524e7-1e2b-4bdd-bdcc-984220c5a551",
+   "metadata": {},
+   "source": [
+    "### dereg_value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35d2e646-5ed8-44e5-8546-d17448e6e063",
+   "id": "b03da64d-64a9-4328-a3a4-d73419f5a9e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7cc663d-25a9-42f0-a74c-bfc444a8ad18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b746e270-3efe-478b-b2bd-fd3c6725405c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53b3f3f9-5d5a-47b4-9c59-dc5c52504695",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80bc53f7-b282-46cd-9f1c-f6c85d69940b",
    "metadata": {},
    "outputs": [],
    "source": []
