--- a/EDA_2.ipynb
+++ b/EDA_2.ipynb
@@ -10102,7 +10102,9 @@
    "cell_type": "code",
    "execution_count": 417,
    "id": "9f96261a-da14-4a51-b58b-f215bfbd4f01",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -10579,7 +10581,7 @@
     "    elif not lookup_by_make_model.empty:\n",
     "        return lookup_by_make_model['CO2 Emissions(g/km)'].mean()\n",
     "    else:\n",
-    "        return None"
+    "        return Nonez"
    ]
   },
   {
