update make lookup

--- a/EDA_2.ipynb
+++ b/EDA_2.ipynb
@@ -78,6 +78,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "cdbbd0e3-11e2-4ab7-aeb7-b1628d96d9bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import requests\n",
+    "# from bs4 import BeautifulSoup\n",
+    "\n",
+    "# # URL of the webpage to scrape\n",
+    "# url = 'https://www.carlogos.org/car-brands-a-z/'\n",
+    "\n",
+    "# # Define headers to mimic a web browser\n",
+    "# headers = {\n",
+    "#     'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 ' +\n",
+    "#                   '(KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36'\n",
+    "# }\n",
+    "\n",
+    "# # Send a GET request to the webpage with headers\n",
+    "# response = requests.get(url, headers=headers)\n",
+    "# response.raise_for_status()  # Check for request errors\n",
+    "\n",
+    "# # Parse the HTML content\n",
+    "# soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "# # Find the main content div that contains the list of car brands\n",
+    "# main_content = soup.find('div', class_='main-l')\n",
+    "\n",
+    "# # Initialize an empty list to store car brands\n",
+    "# car_brands = []\n",
+    "\n",
+    "# # Find all 'dl' elements within the main content\n",
+    "# dl_elements = main_content.find_all('dl')\n",
+    "\n",
+    "# for dl in dl_elements:\n",
+    "#     # Each 'dl' represents a letter section\n",
+    "#     # Find all 'dd' elements within each 'dl', which contain the car brand links\n",
+    "#     dd_elements = dl.find_all('dd')\n",
+    "#     for dd in dd_elements:\n",
+    "#         # Get the car brand name from the 'a' tag text\n",
+    "#         brand_name = dd.find('a').get_text(strip=True)\n",
+    "#         car_brands.append(brand_name)\n",
+    "\n",
+    "# # Print the total number of car brands found\n",
+    "# print(f\"Total car brands found: {len(car_brands)}\")\n",
+    "\n",
+    "# # Print the list of car brands\n",
+    "# for brand in car_brands:\n",
+    "#     print(brand)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 51,
    "id": "8ea7c9ab-3af2-4f77-8892-54eccbb14c7d",
    "metadata": {},
@@ -11651,45 +11703,202 @@
    "id": "fb2524e7-1e2b-4bdd-bdcc-984220c5a551",
    "metadata": {},
    "source": [
-    "### dereg_value"
+    "### scrap co2 emission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "b03da64d-64a9-4328-a3a4-d73419f5a9e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Depreciation: $13,770 /yr\n",
+      "Reg Date: 01-Apr-2015(5yrs  COE left)\n",
+      "Features: 1.6L inline 4 turbocharged engine with 7 speed dual clutch transmission, 120bhp/200nm, 0-100 km/h in 9.1s, 4.29m long with 2.70m wheelbase, 17\" rims. View specs of the\n",
+      "Features Link: /new_cars/newcars_overview.php?CarCode=11306\n",
+      "Accessories: Dual electric seats with 3 memory settings, distance warning, reverse camera and sensors, 6 air bags, Bluetooth.\n",
+      "Accessories Link: /directory/listing.php?CAT=13\n",
+      "Description: Great for short term drive or to renew COE. Option to renew with 5 or 10 years COE. Replaced rear brake pad and discs on 6 June with receipt. Trade in welcome. Low interest bank loan and 100% in house loan available. Transparent dealing, no admin fees, no minimum loan. WhatsApp for viewing appointment, doorstep available.\n",
+      "Category: , Premium Ad Car , Low Mileage Car , Sgcarmart Warranty Cars\n",
+      "Category Link: https://www.sgcarmart.com/used_cars/listing.php?CAT=2\n",
+      "Status: Available for sale.  to get alerted whenever the price or availability changes.\n",
+      "Status Link: javascript:showLoginPopup();\n",
+      "Mileage: 88,388 km (9.2k /yr)\n",
+      "Road Tax: $740 /yr\n",
+      "Dereg Value: N.A.\n",
+      "COE: N.A.\n",
+      "Engine Cap: 1,595 cc\n",
+      "Curb Weight: 1,395 kg\n",
+      "Manufactured: 2014\n",
+      "Transmission: Auto\n",
+      "OMV: $22,897\n",
+      "ARF: $14,056\n",
+      "Power: 90.0 kW (120 bhp)\n",
+      "No. of Owners: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# URL of the webpage to scrape\n",
+    "url = 'https://www.sgcarmart.com/used_cars/info.php?ID=1306309'\n",
+    "\n",
+    "# Define headers to mimic a web browser\n",
+    "headers = {\n",
+    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 ' +\n",
+    "                  '(KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36'\n",
+    "}\n",
+    "\n",
+    "# Send a GET request to the webpage with headers\n",
+    "response = requests.get(url, headers=headers)\n",
+    "response.raise_for_status()  # Check for request errors\n",
+    "\n",
+    "# Parse the HTML content\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "# Find the table with id 'carInfo'\n",
+    "table = soup.find('table', id='carInfo')\n",
+    "\n",
+    "# Initialize an empty dictionary to store the features\n",
+    "car_features = {}\n",
+    "\n",
+    "# Iterate over each row in the table\n",
+    "for row in table.find_all('tr'):\n",
+    "    cells = row.find_all('td')\n",
+    "\n",
+    "    # Check if the row has 4 cells (standard feature rows)\n",
+    "    if len(cells) == 4:\n",
+    "        # Extract the first feature\n",
+    "        feature_name_tag = cells[0].find('strong')\n",
+    "        feature_value_tag = cells[1]\n",
+    "        if feature_name_tag and feature_value_tag:\n",
+    "            feature_name = feature_name_tag.get_text(strip=True)\n",
+    "            feature_value = feature_value_tag.get_text(strip=True)\n",
+    "            car_features[feature_name] = feature_value\n",
+    "\n",
+    "        # Extract the second feature (if present)\n",
+    "        feature_name_tag_2 = cells[2].find('strong')\n",
+    "        feature_value_tag_2 = cells[3]\n",
+    "        if feature_name_tag_2 and feature_value_tag_2:\n",
+    "            feature_name_2 = feature_name_tag_2.get_text(strip=True)\n",
+    "            feature_value_2 = feature_value_tag_2.get_text(strip=True)\n",
+    "            car_features[feature_name_2] = feature_value_2\n",
+    "            \n",
+    "    \n",
+    "    elif len(cells) == 1 and cells[0].has_attr('colspan'):\n",
+    "        colspan = int(cells[0]['colspan'])\n",
+    "        if colspan >= 2:\n",
+    "            feature_title_tag = cells[0].find('div', class_='twoRow_info')\n",
+    "            if feature_title_tag:\n",
+    "                feature_title = feature_title_tag.get_text(strip=True)\n",
+    "                # Extract the entire content including the link\n",
+    "                content = cells[0]\n",
+    "                # Remove the feature title from the content\n",
+    "                content_text = content.get_text(separator=' ', strip=True).replace(feature_title, '').strip()\n",
+    "                # Check if there's an <a> tag\n",
+    "                link_tag = content.find('a')\n",
+    "                if link_tag:\n",
+    "                    link_url = link_tag.get('href')\n",
+    "                    link_text = link_tag.get_text(strip=True)\n",
+    "                    # Remove the link text from the content text\n",
+    "                    content_text = content_text.replace(link_text, '').strip()\n",
+    "                    # Store the feature description and link\n",
+    "                    car_features[feature_title] = content_text\n",
+    "                    car_features[f'{feature_title} Link'] = link_url\n",
+    "                else:\n",
+    "                    car_features[feature_title] = content_text\n",
+    "\n",
+    "\n",
+    "# Handle the rows with 'eachInfo' class (nested features)\n",
+    "each_info_sections = table.find_all('td', {'colspan': '2', 'style': True})\n",
+    "\n",
+    "for section in each_info_sections:\n",
+    "    each_infos = section.find_all('div', class_='eachInfo')\n",
+    "    for info in each_infos:\n",
+    "        feature_name_tag = info.find('div', class_='row_title').find(['strong', 'a'])\n",
+    "        feature_value_tag = info.find('div', class_='row_info')\n",
+    "        if feature_name_tag and feature_value_tag:\n",
+    "            feature_name = feature_name_tag.get_text(strip=True)\n",
+    "            feature_value = feature_value_tag.get_text(strip=True)\n",
+    "            car_features[feature_name] = feature_value\n",
+    "\n",
+    "# Print the extracted features\n",
+    "for key, value in car_features.items():\n",
+    "    print(f\"{key}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "b746e270-3efe-478b-b2bd-fd3c6725405c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'126 g/km (As tested by LTA)'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# URL of the webpage to scrape\n",
+    "url = 'https://www.sgcarmart.com/' + car_features['Features Link'].replace('overview','specs')\n",
+    "\n",
+    "# Define headers to mimic a web browser\n",
+    "headers = {\n",
+    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 ' +\n",
+    "                  '(KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36'\n",
+    "}\n",
+    "\n",
+    "# Send a GET request to the webpage with headers\n",
+    "response = requests.get(url, headers=headers)\n",
+    "response.raise_for_status()  # Check for request errors\n",
+    "\n",
+    "# Parse the HTML content\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "# Find the table with id 'submodel_spec'\n",
+    "spec_table = soup.find('table', id='submodel_spec')\n",
+    "\n",
+    "# Initialize a dictionary to store the specifications\n",
+    "specifications = {}\n",
+    "\n",
+    "# Check if the table exists\n",
+    "if spec_table:\n",
+    "    # Iterate over all 'tr' elements in the table\n",
+    "    for row in spec_table.find_all('tr'):\n",
+    "        # Get all 'td' elements in the row\n",
+    "        cells = row.find_all('td')\n",
+    "        if len(cells) == 2:\n",
+    "            # Get the specification name and value\n",
+    "            spec_name = cells[0].get_text(strip=True)\n",
+    "            spec_value = cells[1].get_text(strip=True)\n",
+    "            specifications[spec_name] = spec_value\n",
+    "\n",
+    "# Extract the CO2 Emission (LTA) value\n",
+    "co2_emission = specifications.get('CO2 Emission (LTA)', 'N/A')\n",
+    "\n",
+    "# Print the CO2 Emission (LTA)\n",
+    "co2_emission"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b03da64d-64a9-4328-a3a4-d73419f5a9e2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7cc663d-25a9-42f0-a74c-bfc444a8ad18",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b746e270-3efe-478b-b2bd-fd3c6725405c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53b3f3f9-5d5a-47b4-9c59-dc5c52504695",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80bc53f7-b282-46cd-9f1c-f6c85d69940b",
+   "id": "f8e846d2-022c-4128-9a90-682aef3a9ae0",
    "metadata": {},
    "outputs": [],
    "source": []
