--- a/EDA_2.ipynb
+++ b/EDA_2.ipynb
@@ -11140,9 +11140,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cs5228",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cs5228"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -11154,7 +11154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
