--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 1,
    "id": "af007c07-c725-427b-84f4-f5638dba282d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils.kanhon_utils import *\n",
     "import pandas as pd\n",
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 2,
    "id": "200517aa-1a9b-4563-bd23-77a0b1b06c8e",
    "metadata": {},
    "outputs": [],
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 3,
    "id": "5a98cadb-9157-45a7-83f6-8f8374ab14cd",
    "metadata": {},
    "outputs": [],
@@ -2264,9 +2255,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cs5228",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cs5228"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2278,7 +2269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
