adding the latest files

--- a/Combined_EDA.ipynb
+++ b/Combined_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8c44143c-834f-49b2-a126-acffa14efa06",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h7/fr7g30_x5x12d68ww_s6w2_m0000gn/T/ipykernel_36875/3661781278.py:4: DeprecationWarning: \n",
+      "/var/folders/h7/fr7g30_x5x12d68ww_s6w2_m0000gn/T/ipykernel_50180/3661781278.py:4: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0b31d26f",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "f9dd642e",
    "metadata": {},
    "outputs": [
@@ -119,21 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4be8c3ca",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'20\" forged wheels, carbon ceramic brakes, aluminium and carbon fibre chassis, magneto rheological suspension, lifting system, sports seats.'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "orig_df.accessories.iloc[6]"
    ]
@@ -707,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "03009600-322c-4c15-b098-cd0aec0a8c16",
    "metadata": {},
    "outputs": [],
@@ -718,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "67e866a0-2550-4cd7-9c15-765524c80c6a",
    "metadata": {},
    "outputs": [],
@@ -732,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "5cc1173e-3396-4f6e-8e85-9b6dea45733a",
    "metadata": {},
    "outputs": [],
@@ -753,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "68ebf9ef",
    "metadata": {},
    "outputs": [
@@ -810,10 +799,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "4f0c4cc9",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/plotly/express/_core.py:2065: FutureWarning:\n",
+      "\n",
+      "When grouping with a length-1 list-like, you will need to pass a length-1 tuple to get_group in a future version of pandas. Pass `(name,)` instead of `name` to silence this warning.\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -821,7 +820,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_12.html\"\n",
+       "    src=\"iframe_figures/figure_22.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -841,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "03a24bed",
    "metadata": {},
    "outputs": [],
@@ -850,6 +849,30 @@
     "train_df , vehicle_type_encoder = vehicle_type_fit_transform(train_df, \"type_of_vehicle\")\n",
     "val_df = vehicle_type_fit(val_df, vehicle_type_encoder)\n",
     "test_df = vehicle_type_fit(test_df, vehicle_type_encoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b7a341c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([ 6868, 24016,  9668, 13640, 14018,  7488,  5804, 12909,  3386,  9567,\n",
+       "       ...\n",
+       "        4988,  4989,  4992,  4993,  4994,  4995,  4996,  4997,  4998,  4999],\n",
+       "      dtype='int64', length=8979)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_df.index"
    ]
   },
   {
@@ -882,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "e543141f-6b13-4eff-a1c6-b72879a09da9",
    "metadata": {},
    "outputs": [],
@@ -896,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "acda1b24",
    "metadata": {},
    "outputs": [],
@@ -918,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "e7712399-9cf4-4e15-bf0a-0b7f76dbaaf1",
    "metadata": {},
    "outputs": [],
@@ -932,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "26f6a77c",
    "metadata": {},
    "outputs": [],
@@ -954,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "8d506c51-2468-41a3-a1fe-57932e3445a7",
    "metadata": {},
    "outputs": [],
@@ -968,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "f22d553c",
    "metadata": {},
    "outputs": [],
@@ -1048,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "b8b7edc0",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1081,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "0ebc8bf6",
    "metadata": {},
    "outputs": [
@@ -1087,17 +1110,21 @@
      "output_type": "stream",
      "text": [
       "19989\n",
-      "[Number of months per owner]  ->  [mean = 48.48792002267915, median = 41.0, mode = 28.0]\n"
+      "[Number of months per owner]  ->  [mean = 48.48792002267915, median = 41.0, mode = 28.0]\n",
+      " ERROR calculateDateDiff strptime() argument 1 must be str, not float DATE FORMAT :: nan \n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "' After imputation : 0'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'NoneType' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m owner_impute \u001b[38;5;241m=\u001b[39m OwnerImputer()\n\u001b[1;32m      6\u001b[0m train_df \u001b[38;5;241m=\u001b[39m owner_impute\u001b[38;5;241m.\u001b[39mfit_transform(df\u001b[38;5;241m=\u001b[39mtrain_df)\n\u001b[0;32m----> 7\u001b[0m val_df \u001b[38;5;241m=\u001b[39m \u001b[43mowner_impute\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mval_df\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m test_df \u001b[38;5;241m=\u001b[39m owner_impute\u001b[38;5;241m.\u001b[39mtransform(test_df)\n\u001b[1;32m      9\u001b[0m display(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m After imputation : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrain_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mno_of_owners\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39misna()\u001b[38;5;241m.\u001b[39msum()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/Desktop/NUS Items/CS5228/Project/CS5228_project/utils/eda.py:71\u001b[0m, in \u001b[0;36mOwnerImputer.transform\u001b[0;34m(self, df, strategy)\u001b[0m\n\u001b[1;32m     68\u001b[0m months \u001b[38;5;241m=\u001b[39m calculateDateDiff(reg_date)\n\u001b[1;32m     70\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m strategy \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmean\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 71\u001b[0m     proc_df\u001b[38;5;241m.\u001b[39mloc[r, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mno_of_owners\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mmonths\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmean\u001b[49m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m strategy \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmedian\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m     73\u001b[0m     proc_df\u001b[38;5;241m.\u001b[39mloc[r, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mno_of_owners\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m months \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmedian\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'NoneType' and 'float'"
+     ]
     }
    ],
    "source": [
@@ -2707,7 +2734,6 @@
     "    'min_samples_split': [2, 5, 10]\n",
     "}\n",
     "\n",
-    "regression_params = {\"l1\" , \"alpha\"}\n",
     "\n",
     "# Example for Random Forest with accuracy scoring and KFold validation\n",
     "tuner, best_params, tuner_results = regressor.hyperparameter_tuning(\n",
