add co2 emission imputer and knn imputer for arf

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -53,7 +53,9 @@
   {
    "cell_type": "markdown",
    "id": "b20960f6-d248-47bd-8e06-db2f68365bd4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Fill missing 'make' info from title"
    ]
@@ -108,7 +110,9 @@
   {
    "cell_type": "markdown",
    "id": "d68cad7d-ca4e-40a6-ad28-5139d263a32d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Cylinder count extractor"
    ]
@@ -455,7 +459,9 @@
   {
    "cell_type": "markdown",
    "id": "2a4c256c-716c-47f9-9f7b-cc496a9d96da",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Impute cylinder data using make, model"
    ]
@@ -1605,6 +1611,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1ab6ce1-601b-4e7d-8083-0e131c2cf8d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8feaee73-6d27-4543-b987-272e82047e79",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4024d423-fdca-4450-8646-7b7df25e443f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1623,7 +1653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
