adding bhushan utils

--- a/combined_data_preprocessing.ipynb
+++ b/combined_data_preprocessing.ipynb
@@ -2,22 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "8c44143c-834f-49b2-a126-acffa14efa06",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/var/folders/h7/fr7g30_x5x12d68ww_s6w2_m0000gn/T/ipykernel_2300/2338746056.py:5: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -50,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "0b31d26f",
    "metadata": {},
    "outputs": [],
@@ -91,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "0ce295a1-88ee-4ee4-8762-ef883ff4c13e",
    "metadata": {},
    "outputs": [],
@@ -107,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "50f6ac9d",
    "metadata": {},
    "outputs": [],
@@ -126,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "03009600-322c-4c15-b098-cd0aec0a8c16",
    "metadata": {},
    "outputs": [],
@@ -354,18 +348,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "49fd98d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Manufactured\n",
-    "\n",
-    "train_df['effective_reg_date'] = train_df['original_reg_date'].fillna(train_df['reg_date'])\n",
-    "train_df = train_df.drop(columns=['original_reg_date'])\n",
-    "\n",
-    "train_df['effective_reg_date'] = pd.to_datetime(train_df['effective_reg_date'], errors='coerce', format='%d-%b-%Y')\n",
-    "train_df['manufactured'] = train_df['manufactured'].fillna(train_df['effective_reg_date'].dt.year)"
+    "# Impute manufactured date\n",
+    "train_df = impute_manufactured_date(train_df) \n",
+    "val_df = impute_manufactured_date(val_df) \n",
+    "test_df = impute_manufactured_date(test_df)"
    ]
   },
   {
@@ -383,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dep_imputer = DepreciationImputer()\n",
+    "depreciation_imputer = DepreciationImputer()\n",
     "\n",
     "train_df = dep_imputer.fit_transform(X=train_df)\n",
     "val_df = dep_imputer.transform(X=val_df)\n",
