adding the newly committed eda

--- a/combined_data_preprocessing.ipynb
+++ b/combined_data_preprocessing.ipynb
@@ -343,7 +343,7 @@
    "id": "786732be",
    "metadata": {},
    "source": [
-    "### Manufactured (Not Done)"
+    "### Manufactured"
    ]
   },
   {
@@ -374,11 +374,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imputation using make, model and car age - Dependency on 'car_age'\n",
     "depreciation_imputer = DepreciationImputer()\n",
+    "train_df = depreciation_imputer.fit_transform(train_df) # 96 empty records\n",
+    "val_df = depreciation_imputer.transform(val_df) # 9 empty records\n",
     "\n",
-    "train_df = dep_imputer.fit_transform(X=train_df)\n",
-    "val_df = dep_imputer.transform(X=val_df)\n",
-    "test_df = dep_imputer.transform(X=test_df)"
+    "# Median imputation for remaining records\n",
+    "imputer = SimpleImputer(strategy='median')\n",
+    "train_df['depreciation'] = imputer.fit_transform(train_df[['depreciation']])\n",
+    "val_df['depreciation'] = imputer.transform(val_df[['depreciation']])\n",
+    "test_df['depreciation'] = imputer.transform(test_df[['depreciation']])"
    ]
   },
   {
@@ -409,13 +414,10 @@
    "source": [
     "# Transmission\n",
     "\n",
-    "# One-hot encoding\n",
-    "train_df = pd.get_dummies(train_df, columns=['transmission'], prefix='transmission')\n",
-    "train_df.drop('transmission_manual', axis=1, inplace=True)\n",
-    "\n",
-    "unique_transmissions = train_df['transmission_auto'].unique()\n",
-    "transmission_counts = train_df['transmission_auto'].value_counts()\n",
-    "print(unique_transmissions, transmission_counts)"
+    "# One-hot (Binary) encoding\n",
+    "encoder = OneHotEncoder(sparse_output=False, drop='first')\n",
+    "train_df['transmission'] = encoder.fit_transform(train_df[['transmission']])\n",
+    "val_df['transmission'] = encoder.transform(val_df[['transmission']])"
    ]
   },
   {
@@ -611,6 +613,29 @@
     "impute_lifespan(train_df)\n",
     "\n",
     "display(f' After imputation : {train_df[\"lifespan\"].isna().sum()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be7fa708",
+   "metadata": {},
+   "source": [
+    "### COE (Outlier Removal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1d2f450a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# COE\n",
+    "\n",
+    "# Cap Outliers - Dependency on 'engine_cap' and 'type_of_vehicle'\n",
+    "train_df = cap_coe_outliers(train_df)\n",
+    "val_df = cap_coe_outliers(val_df)\n",
+    "test_df = cap_coe_outliers(test_df)"
    ]
   },
   {
